force-app/main/default/objects/Lease_Claims__c/Lease_Claims__c.object-meta.xml
<CustomObject>
    <label>Lease Claim</label>
    <nameField>
        <displayFormat>CL# {YYYY}{MM}{000000}</displayFormat>
        <label>Lease Claims Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>