force-app/main/default/objects/Lease_Claims__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lease Claims</relationshipLabel>
    <relationshipName>Lease_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>