force-app/main/default/objects/Lease_Claims__c/fields/AP_Date__c.field-meta.xml
<CustomField>
    <fullName>AP_Date__c</fullName>
    <label>AP Date</label>
    <type>Date</type>
</CustomField>