force-app/main/default/objects/Lease_Claims__c/fields/Cause_Name__c.field-meta.xml
<CustomField>
    <fullName>Cause_Name__c</fullName>
    <label>Cause Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>