force-app/main/default/objects/Lease_Claims__c/fields/Cause_Of_Loss__c.field-meta.xml
<CustomField>
    <fullName>Cause_Of_Loss__c</fullName>
    <label>Cause Of Loss</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Hurricane</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>