force-app/main/default/objects/Lease_Claims__c/fields/Claim_Status__c.field-meta.xml
<CustomField>
    <fullName>Claim_Status__c</fullName>
    <label>Claim Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Customer Contacted</fullName>
            </value>
            <value>
                <fullName>Pending - Waiting on Claim</fullName>
            </value>
            <value>
                <fullName>Pending - Waiting on Customer</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Pending - Waiting on Vendor Install</fullName>
                <isActive>false</isActive>
                <label>Pending - Waiting on Vendor Install</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>