force-app/main/default/objects/Lease_Claims__c/fields/Customer_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Rep_Email__c</fullName>
    <label>Customer Rep Email</label>
    <type>Email</type>
</CustomField>