force-app/main/default/objects/Lease_Claims__c/fields/Customer_Rep_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Rep_Phone_Number__c</fullName>
    <label>Customer Rep Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>