force-app/main/default/objects/Lease_Claims__c/fields/Customer_Service_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Rep_Name__c</fullName>
    <label>Customer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>