force-app/main/default/objects/Lease_Claims__c/fields/Date_to_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Date_to_Insurance__c</fullName>
    <label>Date to Insurance</label>
    <type>Date</type>
</CustomField>