force-app/main/default/objects/Lease_Claims__c/fields/Due_by_DLL__c.field-meta.xml
<CustomField>
    <fullName>Due_by_DLL__c</fullName>
    <label>Due by DLL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>