force-app/main/default/objects/Lease_Claims__c/fields/Due_By_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Due_By_Insurance__c</fullName>
    <label>Due By Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>