force-app/main/default/objects/Lease_Claims__c/fields/Equipment_Count__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Count__c</fullName>
    <label>Equipment Count</label>
    <summaryForeignKey>Lease_Claim_Equipment__c.Lease_Claim__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>