force-app/main/default/objects/Lease_Claims__c/fields/GBU__c.field-meta.xml
<CustomField>
    <fullName>GBU__c</fullName>
    <label>GBU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Office Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>