force-app/main/default/objects/Lease_Claims__c/fields/Insurance_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Claim_Number__c</fullName>
    <label>Insurance Claim Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>