force-app/main/default/objects/Lease_Claims__c/fields/Lease__c.field-meta.xml
<CustomField>
    <fullName>Lease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease</label>
    <referenceTo>cllease__Lease_Account__c</referenceTo>
    <relationshipLabel>Lease Claims</relationshipLabel>
    <relationshipName>Lease_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>