force-app/main/default/objects/Lease_Claims__c/fields/Loss_Date__c.field-meta.xml
<CustomField>
    <fullName>Loss_Date__c</fullName>
    <label>Loss Date</label>
    <type>Date</type>
</CustomField>