force-app/main/default/objects/Lease_Claims__c/validationRules/Claim_Status_Validation_Equip.validationRule-meta.xml
<ValidationRule>
    <fullName>Claim_Status_Validation_Equip</fullName>
    <active>true</active>
    <errorConditionFormula>TExt(Claim_Status__c) = &apos;Submitted&apos; &amp;&amp;  Equipment_Count__c = 0</errorConditionFormula>
    <errorMessage>You must add equipment to the claim before submitting it for processing!  

You also cannot delete equipment once it is submitted to Newco!</errorMessage>
</ValidationRule>