force-app/main/default/objects/Lease_Claims__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Claim_Status__c</columns>
    <columns>NAME</columns>
    <columns>Lease__c</columns>
    <columns>Account__c</columns>
    <columns>Amount_to_Pay__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>