force-app/main/default/objects/Lease_Claims__c/listViews/Buckets.listView-meta.xml
<ListView>
    <fullName>Buckets</fullName>
    <columns>NAME</columns>
    <columns>Claim_Status__c</columns>
    <columns>Lease__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Buckets</label>
</ListView>