force-app/main/default/objects/Lease_Claims__c/listViews/Completed_Insurance_Claims_Lease_Claims.listView-meta.xml
<ListView>
    <fullName>Completed_Insurance_Claims_Lease_Claims</fullName>
    <filterScope>Queue</filterScope>
    <label>Completed Insurance Claims</label>
    <queue>Completed_Insurance_Claims</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>