force-app/main/default/objects/Lease_Claims__c/listViews/Insurance_Claim_Queue_Lease_Claims.listView-meta.xml
<ListView>
    <fullName>Insurance_Claim_Queue_Lease_Claims</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Days_Active__c</columns>
    <columns>Customer_Service_Rep_Name__c</columns>
    <columns>Customer_Rep_Phone_Number__c</columns>
    <columns>Customer_Rep_Email__c</columns>
    <columns>Claim_Status__c</columns>
    <filterScope>Queue</filterScope>
    <label>Insurance Claim Queue</label>
    <queue>Insurance_Claim_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>