force-app/main/default/objects/Lease_Claims__c/listViews/My_Claims.listView-meta.xml
<ListView>
    <fullName>My_Claims</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Claims</label>
</ListView>